# trabxml

./: CMakeLists.txt  CMakeLists.txt.user.0a65034  Makefile  README.md  XmlValidator.pro  dashboard.cpp  dashboard.h  exemplo.xml  exemplo.xsd  main.cpp  trabxml2.pro  ui_dashboard.h
include/: Dashboard.h  XmlProcessor.h  XmlValidator.h
src/: Dashboard.cpp  XmlProcessor.cpp  XmlValidator.cpp  main.cpp
tests/: notasFiscais.xml
